# ChangeLog for dev-python/six
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  09 Apr 2012; James Rowe <jnrowe@gmail.com> six-1.1.0.ebuild:
  Switched to python-distutils-ng eclass.

  26 Mar 2012; James Rowe <jnrowe@gmail.com> six-1.1.0.ebuild:
  Keyworded x86.

  26 Mar 2012; James Rowe <jnrowe@gmail.com> six-1.1.0.ebuild:
  Keyworded amd64.

  18 Mar 2012; James Rowe <jnrowe@gmail.com> six-1.1.0.ebuild:
  Switched to EAPI4.

  25 Feb 2012; James Rowe <jnrowe@gmail.com> six-1.1.0.ebuild:
  Keyworded \~x86.

*six-1.1.0 (25 Feb 2012)

  25 Feb 2012; James Rowe <jnrowe@gmail.com> +six-1.1.0.ebuild, +metadata.xml,
  +watch:
  Initial ebuild, required for argh-0.15.0 [555].
