@@ -11,4 +11,4 @@ REQUIRED_USE=|| ( python_targets_python2_5 python_targets_python2_6 python_targe
 SLOT=0
 SRC_URI=mirror://pypi/s/six/six-1.1.0.tar.gz
 _eclasses_=eutils	6891f6f484e3b44a0a15e1b0c0fc9a14	jnrowe-pypi	2a731c2f3dfb2808624d1093883f62e1	multilib	5f4ad6cf85e365e8f0c6050ddd21659e	python-distutils-ng	9c728fa97679b3ca2742cf8ccd260599	toolchain-funcs	6526ac6fc9aedf391efb91fcd75ace68	user	32a09e82e2f592bf88ad2fd08525166e
-_md5_=d9977c352bd621c5152f1a1966b2a12a
+_md5_=e398788ef1d9f0deee130521a5ed85c3
