@@ -3,6 +3,9 @@
 # $Header: $
 
   09 Apr 2012; James Rowe <jnrowe@gmail.com> six-1.1.0.ebuild:
+  src_install default hack now in jnrowe-pypi eclass.
+
+  09 Apr 2012; James Rowe <jnrowe@gmail.com> six-1.1.0.ebuild:
   Switched to python-distutils-ng eclass.
 
   26 Mar 2012; James Rowe <jnrowe@gmail.com> six-1.1.0.ebuild:
